--- a/modulo3/fundo006.html
+++ b/modulo3/fundo006.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens-cap19/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* Shorthand - background
+            color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url(imagens-cap19/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         } 
         
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,6 +37,7 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos repellat ducimus omnis sit veniam eligendi dolor. Numquam nemo est consequatur quam? Nihil ducimus in, at et aut enim porro natus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quaerat voluptatibus laborum vel magni eos ad dolor omnis aperiam veniam laboriosam officia atque porro ipsum, veritatis fuga repellendus, quisquam numquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. A natus accusamus ipsum illum ducimus labore pariatur, ipsa hic rerum error est eligendi nulla recusandae atque sequi at et assumenda iste?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos repellat ducimus omnis sit veniam eligendi dolor. Numquam nemo est consequatur quam? Nihil ducimus in, at et aut enim porro natus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quaerat voluptatibus laborum vel magni eos ad dolor omnis aperiam veniam laboriosam officia atque porro ipsum, veritatis fuga repellendus, quisquam numquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. A natus accusamus ipsum illum ducimus labore pariatur, ipsa hic rerum error est eligendi nulla recusandae atque sequi at et assumenda iste?</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos repellat ducimus omnis sit veniam eligendi dolor. Numquam nemo est consequatur quam? Nihil ducimus in, at et aut enim porro natus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quaerat voluptatibus laborum vel magni eos ad dolor omnis aperiam veniam laboriosam officia atque porro ipsum, veritatis fuga repellendus, quisquam numquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. A natus accusamus ipsum illum ducimus labore pariatur, ipsa hic rerum error est eligendi nulla recusandae atque sequi at et assumenda iste?</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos repellat ducimus omnis sit veniam eligendi dolor. Numquam nemo est consequatur quam? Nihil ducimus in, at et aut enim porro natus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quaerat voluptatibus laborum vel magni eos ad dolor omnis aperiam veniam laboriosam officia atque porro ipsum, veritatis fuga repellendus, quisquam numquam?Lorem ipsum dolor sit amet consectetur adipisicing elit. A natus accusamus ipsum illum ducimus labore pariatur, ipsa hic rerum error est eligendi nulla recusandae atque sequi at et assumenda iste?</p>
     </main>
 </body>
 </html>
